--- a/Inventory_App/Inventory_App/Inventory_App.vcxproj
+++ b/Inventory_App/Inventory_App/Inventory_App.vcxproj
@@ -150,10 +150,14 @@
     <ClCompile Include="Inventory.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Sort.cpp" />
+    <ClCompile Include="UserI0.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Sort.h" />
     <ClInclude Include="Inventory.h" />
     <ClInclude Include="Item.h" />
+    <ClInclude Include="UserI0.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
