--- a/Inventory_App/Inventory_App/Inventory_App.vcxproj
+++ b/Inventory_App/Inventory_App/Inventory_App.vcxproj
@@ -147,6 +147,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="FileIO.cpp" />
     <ClCompile Include="Inventory.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -154,6 +155,7 @@
     <ClCompile Include="UserI0.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="FileIO.h" />
     <ClInclude Include="Sort.h" />
     <ClInclude Include="Inventory.h" />
     <ClInclude Include="Item.h" />
